--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "react-dom": "^16.12.0",
     "react-helmet": "^6.0.0",
     "react-icons": "^3.10.0",
-    "react-markdown": "^4.3.1"
+    "react-markdown": "^4.3.1",
+    "react-spring": "^8.0.27",
+    "styled-components": "^5.1.1"
   },
   "devDependencies": {
     "prettier": "2.0.5"
