--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-icons": "^3.10.0",
     "react-markdown": "^4.3.1",
     "react-spring": "^8.0.27",
+    "react-switch": "^5.0.1",
     "react-text-loop": "^2.3.0",
     "styled-components": "^5.1.1"
   },
